tui/tests/snapshots/entry__csv_alert.snap
---
source: tui/tests/entry.rs
assertion_line: 83
expression: text
snapshot_kind: text
---
 Glues - TUI note-taking app offering complete data control and flexible storage options               [?] Show keymap 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                           ████   ███                                                                   
                                          ██  ██   ██                                                                   
                                         ██        ██    ██  ██   ████    █████                                         
                                         ██        ██    ██  ██  ██  ██  ██                                             
                                         ██  ███   ██    ██  ██  ██████   ████                                          
                                          ██  ██   ██    ██  ██  ██          ██                                         
                                      ┌───────────────────Alert───────────────────┐                                     
                                      │                                           │                                     
                                      │  Path cannot be empty                     │                                     
                                      │                                           │                                     
                                      │                                           │                                     
                                      │          Press any key to close           │                                     
                                      │                                           │                                     
                                      └───────────────────────────────────────────┘                                     
                                         │   [4] MongoDB                      │                                         
                                         │   [5] CSV                          │                                         
                                         │   [6] JSON                         │                                         
                                         │   [h] Help                         │                                         
                                         │   [q] Quit                         │                                         
                                         │                                    │                                         
                                         └────────────────────────────────────┘
