tui/tests/snapshots/entry__help_closed.snap
---
source: tui/tests/entry.rs
expression: text
snapshot_kind: text
---
 Glues - TUI note-taking app offering complete data control and flexible storage options               [?] Show keymap 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                           ████   ███                                                                   
                                          ██  ██   ██                                                                   
                                         ██        ██    ██  ██   ████    █████                                         
                                         ██        ██    ██  ██  ██  ██  ██                                             
                                         ██  ███   ██    ██  ██  ██████   ████                                          
                                          ██  ██   ██    ██  ██  ██          ██                                         
                                           █████  ████    ███ ██  ████   █████                                          
                                                                                                                        
                                                                                                                        
                                         ┌─────────────Open Notes─────────────┐                                         
                                         │                                    │                                         
                                         │   [1] Instant                      │                                         
                                         │   [2] Local                        │                                         
                                         │   [3] Git                          │                                         
                                         │   [4] MongoDB                      │                                         
                                         │   [5] CSV                          │                                         
                                         │   [6] JSON                         │                                         
                                         │   [h] Help                         │                                         
                                         │   [q] Quit                         │                                         
                                         │                                    │                                         
                                         └────────────────────────────────────┘
