tui/tests/snapshots/entry__help_open.snap
---
source: tui/tests/entry.rs
expression: text
snapshot_kind: text
---
 Glues - TUI note-taking app offering complete data control and flexible storage options               [?] Show keymap 
                                                                                                                        
                                                                                                                        
┌─────────────────────────────────────────────────────────Help─────────────────────────────────────────────────────────┐
│                                                                                                                      │
│  Glues offers various storage options to suit your needs:                                                            │
│                                                                                                                      │
│  Instant                                                                                                             │
│  Data is stored in memory and only persists while the app is running.                                                │
│  This option is useful for testing or temporary notes as it is entirely volatile.                                    │
│                                                                                                                      │
│  Local                                                                                                               │
│  Notes are stored locally as separate files.                                                                         │
│  This is the default option for users who prefer a simple, file-based approach without any remote synchronization.   │
│                                                                                                                      │
│  Git                                                                                                                 │
│  Git storage requires three inputs: `path`, `remote`, and `branch`.                                                  │
│  The `path` should point to an existing local Git repository, similar to the file storage path.                      │
│  For example, you can clone a GitHub repository and use that path.                                                   │
│  The `remote` and `branch` specify the target remote repository and branch for synchronization.                      │
│  When you modify notes or directories, Glues will automatically sync changes with the specified remote repository.   │
│                                                                                                                      │
│  MongoDB                                                                                                             │
│  MongoDB storage allows you to store your notes in a MongoDB database, providing a scalable and centralized          │
│  solution for managing your notes.                                                                                   │
│  You need to provide the MongoDB connection string and the database name.                                            │
│  Glues will handle storing and retrieving notes from the specified database.                                         │
│  This option is ideal for users who prefer a centralized storage solution or need robust, reliable data storage.     │
│                                                                                                                      │
│  CSV or JSON                                                                                                         │
│  These formats store notes as simple log files, ideal for quick data exports or reading logs.                        │
│  CSV saves data in comma-separated format, while JSON uses JSONL (JSON Lines) format.                                │
│                                                                                                                      │
│                                                                                                                      │
│                                                Press any key to close                                                │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
